# ColorAIze-A-system-for-colorizing-images

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLEANUP.md  DOCKER.md  Dockerfile  Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  MIGRATION.md  README.md  SETUP.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  nginx.conf  package-lock.json  package.json  start.sh  tailwind.config.ts
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  colorizer.py  config.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_api.py  test_colorizer.py
client/: requirements.md
client/src/: App.tsx
client/src/components/: layout.tsx
client/src/hooks/: use-images.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: image-compare.tsx  image-viewer.tsx  layout.tsx  status-badge.tsx
frontend/src/hooks/: use-images.ts  use-share.ts
frontend/src/lib/: session.ts
frontend/src/pages/: gallery.tsx  home.tsx  not-found.tsx  public-result.tsx  result.tsx
ml/scripts/: download_model.py
server/: routes.ts  storage.ts
server/replit_integrations/image/: client.ts
server/services/deoldify/: README.md  client.ts
shared/: routes.ts  schema.ts
